--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,8 +1,15 @@
+//colors
+$color-primary: #73fc85;
+$color-secondary: #fa6161;
+$color-gray: #747474;
+$color-black: #000000;
+$color-white: #ffffff;
+
 // spacing
 $base-padding: 0.75rem;
 $base-margin: 0.75rem;
 
 //font sizes
 $base-font-size: 1rem;
-$font-size-sm: $base-font-size * 0.5;
+$font-size-sm: $base-font-size * 0.8;
 $font-size-lg: $base-font-size * 2;
