card styling with tags

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 //colors
-$color-primary: #73fc85;
-$color-secondary: #fa6161;
+$color-primary: #2aa83b;
+$color-secondary: #f32f2f;
 $color-gray: #747474;
 $color-black: #000000;
 $color-white: #ffffff;
@@ -8,6 +8,7 @@ $color-white: #ffffff;
 // spacing
 $base-padding: 0.75rem;
 $base-margin: 0.75rem;
+$grid-gap: 30px;
 
 //font sizes
 $base-font-size: 1rem;
